--- a/package.json
+++ b/package.json
@@ -11,28 +11,23 @@
   "dependencies": {
     "@react-three/drei": "^9.92.0",
     "@react-three/fiber": "^8.15.0",
-    "@supabase/ssr": "^0.4.1",
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.39.7",
     "@tanstack/react-query": "^5.17.0",
     "clsx": "^2.1.0",
-    "crypto-js": "^4.2.0",
     "framer-motion": "^10.18.0",
+    "groq-sdk": "^0.37.0",
     "lucide-react": "^0.303.0",
     "next": "^15.0.0",
-    "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.2.0",
-    "three": "^0.159.0",
-    "zod": "^3.25.76"
+    "three": "^0.159.0"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.13",
-    "@types/autoprefixer": "^9.7.2",
-    "@types/node": "^20.19.25",
-    "@types/react": "^18.3.27",
-    "@types/react-dom": "^18.3.7",
-    "@types/tailwindcss": "^3.0.11",
+    "@types/node": "^20.10.6",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
     "@types/three": "^0.159.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
