--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "groq-sdk": "^0.37.0",
     "lucide-react": "^0.303.0",
     "next": "^15.0.0",
+    "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.2.0",
